.scratch/research/dx/e5/archaeology/m_sql_empty_record.stderr
File "m_sql_empty_record.ml", line 2, characters 28-29:
2 | [%%eta.sql.table type t = { }]
                                ^
Error: Syntax error
